# arrayfire_interop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aftypes.hpp  boost.cmake  colormap.cu  colormap.hpp  main.cpp
